This is an index file.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
-  <link rel="stylesheet" href="asset/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -118,6 +118,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Patel Priya</a>.
   </div>
-  <script src="asset/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
